1.10/deploying-services/containerizers/ucr.md
---
nav_title: Universal Container Runtime
post_title: Universal Container Runtime (UCR)
feature_maturity: preview
menu_order: 10
---

The [Universal Container Runtime](http://mesos.apache.org/documentation/latest/container-image) (UCR) extends the Mesos containerizer to support provisioning [Docker](https://docker.com/) container images. This means that you can use both the Mesos containerizer and other container image types in DC/OS. You can still use the Docker container runtime directly with DC/OS, but the Universal Container Runtime supports running Docker images without depending on the Docker Engine, which 

- Reduces dependencies.
- Reduces service downtime (upgrading or restarting Docker kills all running containers on a node).
- Improves on the fly upgradability.

The Universal Container Runtime offers the following advantages:

* **Removes your dependency on the Docker daemon**: With previous versions of Docker, if the Docker daemon was not responsive, a restart to the daemon caused all containers to stop on the host. In addition, Docker must be installed on each of your agent nodes to use the Docker containerizer. This means that to use the Docker containerizer you need to upgrade Docker on the agent nodes each time a new version of Docker comes out.
* The UCR is more stable and allows deployment at scale.
* The UCR offers features not available in the Docker containerizer, such as GPU and CNI support.
* The UCR allows you to take advantage of continuing innovation within both the Mesos and DC/OS, including features such as IP per container, strict container isolation, and more.

# Provision Containers with the Universal Container Runtime from the DC/OS Web Interface

## Prerequisite
If your service [pulls Docker images from a private registry](/docs/1.10/deploying-services/private-docker-registry/), you must specify the [`cluster_docker_credentials_path` in your `config.yaml`](/docs/1.10/installing/custom/configuration/configuration-parameters/#cluster_docker_credentials) file before installing DC/OS.

1. Enter the service ID.

1. In the **CONTAINER IMAGE** field, optionally enter a container image. Otherwise, enter a command in the **COMMAND** field. 

1. Specify the UCR from the web interface. Go to **Services**  > **Run a Service** > **Single Container** > **More Settings**. In the **Container Runtime** section, choose the **MESOS RUNTIME** radio button.


# Provision Containers with the Universal Container Runtime from the DC/OS CLI

## Prerequisite
If your service [pulls Docker images from a private registry](/docs/1.10/deploying-services/private-docker-registry/), you must specify the [`cluster_docker_credentials_path` in your `config.yaml`](/docs/1.10/installing/custom/configuration/configuration-parameters/#cluster_docker_credentials) file before installing DC/OS.

1. Specify the container type `MESOS` and a the appropriate object in your [Marathon application definition](/docs/1.10/deploying-services/creating-services/). Here, we specify a Docker container with the `docker` object.

The UCR provides an optional `pullConfig` parameter to enable you to [authenticate to a private Docker registry](/docs/1.10/deploying-services/private-docker-registry/).

```json
{  
   "id":"mesos-docker",
   "container":{  
      "docker": {
          "image": "mesosphere/inky",
          "pullConfig": {
            "secret": "pullConfigSecret"
          }
      },
      "type":"MESOS"
   },
   "secrets": {
        "pullConfigSecret": {
          "source": "/mesos-docker/pullConfig"
        }
   },
   "args":[  
      "<my-arg>"
   ],
   "cpus":0.2,
   "mem":16.0,
   "instances":1
}
```

**Important:** If you leave the `args` field empty, the default entry point will be the launch command for the container. If your container does not have a default entry point, you must specify a command in the `args` field. If you do not, your service will fail to deploy.

# Limitations
- The UCR is a [preview](/docs/1.10/overview/feature-maturity/) feature in DC/OS 1.10.
- The UCR does not support the following: runtime privileges, Docker options, force pull, named ports, numbered ports, bridge networking, port mapping, private registries with container authentication.

# Further Reading
- [View the Mesos docs for the UCR](http://mesos.apache.org/documentation/latest/container-image/).
